<resources>
    <string name="app_name">Ti-Tip</string>
    <string name="dashboard_storage_history">Riwayat Titipan</string>
    <string name="dashboard_more">Selengkapnya >></string>
    <string name="create_new_goods_title">Penitipan Baru</string>
    <string name="create_new_goods_name">Nama titipan</string>
    <string name="create_new_goods_location_label">Lokasi penitipan</string>
    <string name="create_new_goods_location">Pilih lokasi</string>
    <string name="create_new_goods_submit_label">Buat Titipan</string>
    <string name="grocery_label">Barang basah?</string>
    <string name="fragile_label">Barang pecah belah?</string>
    <string name="goods_detail_location_label">Lokasi titipan</string>
    <string name="goods_detail_responsible_label">Penanggung jawab titipan</string>
    <string name="goods_detail_status_label">Status</string>
    <string name="goods_detail_dimension_label">Dimensi</string>
    <string name="goods_detail_weight_label">Berat</string>
    <string name="goods_detail_expired_label">Kadaluarsa</string>
    <string name="goods_detail_est_price_label">Estimasi biaya</string>
    <string name="pindah_titip">Pindah Titip</string>
    <string name="return_goods">Kembalikan</string>
    <string name="password_label">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="register_question">Apakah anda tidak mempunyai akun?</string>
    <string name="reg_btn_txt">Register</string>
    <string name="konfirmasi_user">Konfirmasi</string>
    <string name="peringatan_konfirmasi">Anda masih bisa mengubah pesanan</string>
    <string name="lanjutan_peringatan">sebelum melakukan konfirmasi</string>
    <string name="konfirmasi_titipan_user">Konfirmasi Ringkasan Titipan</string>
    <string name="ket_txt">Silahkan pilih akun yang ingin anda buat</string>
    <string name="ket2_txt">Butuh Penjelasan mengenai akun?</string>
    <string name="agen_btn">Agen</string>
    <string name="user_btn">User</string>
    <string name="help_btn">Help</string>
    <string name="help_txt">Berikut merupakan penjelasan mengenai akun user</string>
    <string name="user_acc_txt">Akun User</string>
    <string name="pindah_tombol">Pindahkan titipan</string>
    <string name="estimasi_kirim">Estimasi biaya kirim</string>
    <string name="lokasi_tujuan">Lokasi tujuan</string>
    <string name="pilih_lokasi">Pilih lokasi</string>
    <string name="user_info_txt">
        Akun user dapat anda pilih jika ingin memakai layanan Ti-tip. Dimana layanan dapat dipakai secara penuh setelah melakukan registrasi
    </string>
    <string name="agent_acc_txt">2. Akun Agent</string>
    <string name="agent_info_txt">
        Anda dapat memilih akun agent jika ingin menjadi mitra kerja dari TI-tip. Agent akan bertindak sebagai penghubung antara merchant dan user, yang nantinya akan mengantar Titipan ke tempat user.
    </string>
    <string name="nama_lengkap_label">Nama Lengkap</string>
    <string name="NIK_label">NIK</string>
    <string name="lokasi_sekarang">Lokasi sekarang</string>
    <string name="nope_label">No HP</string>
    <string name="mail_label">E-Mail</string>
    <string name="nama_titipan">Nama titipan</string>
    <string name="title_activity_peta_pilih_agen">Map</string>
    <string name="choosen_loc_label">Lokasi Terpilih: </string>
    <string name="search_loc_label">Pencarian Lokasi …</string>
    <string name="est_shipment_cost">Rp15000</string>
    <string name="change">Ubah</string>
    <string name="change_password">Ubah kata sandi</string>
    <string name="logout">Keluar</string>
    <string name="curr_password">Sandi sekarang:</string>
    <string name="new_password">Sandi baru:</string>
    <string name="confirm_password">Konfirmasi sandi:</string>
    <string name="new_email">Email baru:</string>
    <string name="new_phone">Nomor baru:</string>
</resources>