<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".PindahTitip">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:background="@color/transparent"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_pindah_titip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_pindah_titip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/frame_back_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_pindah_titip" />

    <TextView
        android:id="@+id/pindah_titip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_pindah_titip" />

    <TextView
        android:id="@+id/lokasi_sekarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lokasi_sekarang"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/view_pindah_titip"
        app:layout_constraintTop_toBottomOf="@id/pindah_titip" />

    <TextView
        android:id="@+id/curr_loc_pindah_titip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view_pindah_titip"
        app:layout_constraintStart_toStartOf="@id/view_pindah_titip"
        app:layout_constraintTop_toBottomOf="@id/lokasi_sekarang" />

    <TextView
        android:id="@+id/lokasi_tujuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lokasi_tujuan"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/lokasi_sekarang"
        app:layout_constraintTop_toBottomOf="@id/curr_loc_pindah_titip" />

    <Button
        android:id="@+id/tombol_pilih_lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/btn_bg"
        android:text="@string/pilih_lokasi"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/lokasi_tujuan"
        app:layout_constraintStart_toEndOf="@id/lokasi_tujuan"
        app:layout_constraintTop_toTopOf="@id/lokasi_tujuan" />

    <TextView
        android:id="@+id/lokasi_yang_dipilih"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/view_pindah_titip"
        app:layout_constraintStart_toStartOf="@id/view_pindah_titip"
        app:layout_constraintTop_toBottomOf="@id/tombol_pilih_lokasi" />

    <TextView
        android:id="@+id/estimasi_biaya_kirim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/estimasi_kirim"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/view_pindah_titip"
        app:layout_constraintStart_toStartOf="@id/view_pindah_titip"
        app:layout_constraintTop_toBottomOf="@id/lokasi_yang_dipilih" />

    <TextView
        android:id="@+id/hasil_biaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/est_shipment_cost"
        android:textStyle="italic|bold"
        android:textSize="24sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@id/view_pindah_titip"
        app:layout_constraintStart_toStartOf="@id/view_pindah_titip"
        app:layout_constraintTop_toBottomOf="@id/estimasi_biaya_kirim" />

    <Button
        android:id="@+id/tombol_pindah_titip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/btn_yellow"
        android:text="@string/pindah_tombol"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/view_pindah_titip"
        app:layout_constraintStart_toStartOf="@id/view_pindah_titip"
        app:layout_constraintTop_toBottomOf="@id/hasil_biaya" />
</androidx.constraintlayout.widget.ConstraintLayout>